--- a/6.4-Frontend_Deployment_With_AWS_ElasticBeantalk/todo-react-app/package.json
+++ b/6.4-Frontend_Deployment_With_AWS_ElasticBeantalk/todo-react-app/package.json
@@ -15,7 +15,7 @@
     "web-vitals": "^1.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
